--- a/tasks/OSSec/Win32NT.yml
+++ b/tasks/OSSec/Win32NT.yml
@@ -7,4 +7,4 @@
     name: 'wazuh'
     state: 'restarted'
     start_mode: 'auto'
-  when: ossec_correct_version is not defined or ossec_agent_conf_udpate is changed or ossec_internal_conf_update is changed
+  when: ossec_correct_version is not defined or ossec_agent_conf_udpate is changed or ossec_internal_conf_update is changed or ossec_agent_auth_output is changed
