--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -464,11 +464,14 @@ node_exporter_collector: # 普罗米修斯客户端系统收集器。
 #  - tcpstat
   - 'textfile'
 node_exporter_systemd_collector: # 普罗米修斯客户端服务收集器。
-  - 'sshd'
   - 'auditd'
-  - 'rsyslog'
   - 'crond'
   - 'ntpd'
+  - 'rsyslog'
+  - 'sshd'
+  - 'wazuh-agent'
+  - 'wazuh-api'
+  - 'wazuh-manager'
 node_exporter_ignored_mount_points_collector: # 普罗米修斯客户端收集器忽略的磁盘挂载点。
   - 'data/docker/'
   - 'dev'
