modified:   defaults/main.yml 	modified:   tasks/OSSec/Linux/configureation.yml 	modified:   tasks/OSSec/Win32NT/configureation.yml 	modified:   templates/ossec.conf.j2

--- a/tasks/OSSec/Linux/configureation.yml
+++ b/tasks/OSSec/Linux/configureation.yml
@@ -8,7 +8,7 @@
   shell: >
     /var/ossec/bin/agent-auth
     -A {{ inventory_hostname | upper }}
-    -m {{ ossec_managers.0.address }}
+    -m {{ ossec_agent_authd.address }}
     -p {{ ossec_agent_authd.port }}
     -P {{ ossec_authd_pass }}
     {% if ossec_agent_authd.ssl_auto_negotiate == 'yes' %}-a{% endif %}
