--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -34,16 +34,17 @@ syslog_server: # 远程日志服务器地址列表。
 ossec_version: '3.9.2-1'
 ossec_authd_pass: 'Bf6vJRT4WaEAHq'
 ossec_managers:
-  - address: '127.0.0.1'
-    port: '1514'
-    protocol: 'udp'
-    api_port: '55000'
-    api_proto: 'https'
-    api_user: null
+  address:
+    - '127.0.0.1'
+  port: '1514'
+  protocol: 'tcp'
+  api_port: '55000'
+  api_proto: 'https'
+  api_user: null
 ossec_profile: null
 ossec_auto_restart: 'yes'
 ossec_agent_authd:
-  enable: true
+  address: '127.0.0.1'
   port: '1515'
   ssl_auto_negotiate: 'no'
 ossec_notify_time: '10'
