modified:   tasks/OSSec/Linux.yml

--- a/tasks/OSSec/Linux.yml
+++ b/tasks/OSSec/Linux.yml
@@ -13,3 +13,6 @@
   shell: echo ''
   notify: 'Ensure OSSEC agent service is enabled'
   when: ossec_agent_auth_output is changed or ossec_agent_conf_udpate is changed or ossec_internal_conf_update is changed
+
+- name: Force the handler to run immediately
+  meta: flush_handlers
