--- a/tasks/OSSec/Linux/configureation.yml
+++ b/tasks/OSSec/Linux/configureation.yml
@@ -31,9 +31,10 @@
 
 - name: OSSEC agent internal options configuration file transfer
   template:
-    src: 'local_internal_options.conf.j2'
-    dest: '/var/ossec/etc/local_internal_options.conf'
+    src: '{{ item.src }}'
+    dest: '{{ item.dest }}'
     owner: 'root'
     group: 'ossec'
     mode: '0640'
+  loop: '{{ ossec_internal_options }}'
   register: ossec_internal_conf_update
