modified:   tasks/OSSec/Linux.yml 	new file:   tasks/OSSec/Linux/cleanup.yml

--- a/tasks/OSSec/Linux.yml
+++ b/tasks/OSSec/Linux.yml
@@ -16,3 +16,6 @@
 
 - name: Force the handler to run immediately
   meta: flush_handlers
+
+- name: Remove OSSec metadata
+  include: '{{ ansible_system }}/cleanup.yml'
