modified:   defaults/main.yml 	new file:   files/osquery.win.conf 	modified:   tasks/Exporter/Win32NT.yml 	modified:   tasks/OSSec/Win32NT.yml 	new file:   tasks/OSSec/Win32NT/osquery.yml 	modified:   tasks/Software/Win32NT.yml 	modified:   templates/ossec.conf.j2 	modified:   vars/Windows.yml

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -70,7 +70,7 @@ ossec_agent_config:
     restart_audit: 'yes'
     win_audit_interval: 300
     skip_nfs: 'yes'
-    ignore:
+    linux_ignore:
       - /etc/mtab
       - /etc/hosts.deny
       - /etc/mail/statistics
@@ -89,110 +89,60 @@ ossec_agent_config:
       - '.log$|.htm$|.jpg$|.png$|.chm$|.pnf$|.evtx$'
     no_diff:
       - /etc/ssl/private.key
-    directories:
-      - dirs: /etc,/usr/bin,/usr/sbin
-        checks: 'check_all="yes"'
-      - dirs: /bin,/sbin
-        checks: 'check_all="yes"'
-      - dirs: /usr/local/sbin,/usr/local/bin
-        checks: 'check_all="yes"'
+    linux_directories:
+      - dirs: '/etc'
+        whodata: 'yes'
+      - dirs: '/bin,/sbin,/usr/bin,/usr/sbin'
+      - dirs: '/usr/local/sbin,/usr/local/bin'
     win_directories:
       - dirs: '%WINDIR%\regedit.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\system.ini'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\win.ini'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\at.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\attrib.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\cacls.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\cmd.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\drivers\etc'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\eventcreate.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\ftp.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\lsass.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\net.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\net1.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\netsh.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\reg.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\regedt32.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\regsvr32.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\runas.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\sc.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\schtasks.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\sethc.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\subst.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\wbem\WMIC.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\WindowsPowerShell\v1.0\powershell.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\SysNative\winrm.vbs'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\at.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\attrib.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\cacls.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\cmd.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\drivers\etc'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\eventcreate.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\ftp.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\net.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\net1.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\netsh.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\reg.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\regedit.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\regedt32.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\regsvr32.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\runas.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\sc.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\schtasks.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\sethc.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\subst.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\wbem\WMIC.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\WindowsPowerShell\v1.0\powershell.exe'
-        checks: 'check_all="yes"'
       - dirs: '%WINDIR%\System32\winrm.vbs'
-        checks: 'check_all="yes"'
       - dirs: '%PROGRAMDATA%\Microsoft\Windows\Start Menu\Programs\Startup'
-        checks: 'check_all="yes" realtime="yes"'
     windows_registry:
       - key: 'HKEY_LOCAL_MACHINE\Software\Classes\batfile'
       - key: 'HKEY_LOCAL_MACHINE\Software\Classes\cmdfile'
@@ -242,11 +192,11 @@ ossec_agent_config:
   osquery:
     disable: 'no'
     run_daemon: 'yes'
-    bin_path_win: 'C:\ProgramData\osquery\osqueryd'
     log_path: '/var/log/osquery/osqueryd.results.log'
-    log_path_win: 'C:\ProgramData\osquery\log\osqueryd.results.log'
     config_path: '/etc/osquery/osquery.conf'
-    config_path_win: 'C:\ProgramData\osquery\osquery.conf'
+    log_path_win: 'C:\Program Files\osquery\log\osqueryd.results.log'
+    bin_path_win: 'C:\Program Files\osquery\osqueryd'
+    config_path_win: 'C:\Program Files\osquery\osquery.conf'
     add_labels: 'yes'
   syscollector:
     disable: 'no'
