--- a/tasks/Software/Win32NT.yml
+++ b/tasks/Software/Win32NT.yml
@@ -11,7 +11,7 @@
   win_chocolatey:
     name: 'chocolatey'
     state: 'downgrade'
-    version: '0.10.11'
+    version: '{{ win_chocolatey_version }}'
     proxy_url: '{{ os_proxy_server | default(omit,true) }}'
   register: chocolatey_status
   until: chocolatey_status is succeeded
