modified:   defaults/main.yml 	renamed:    templates/audit.rules.j2 -> files/audit.rules 	modified:   tasks/Harden/Linux/RedHat/Audit.yml 	modified:   tasks/OSSec/Linux.yml 	modified:   templates/internal_options.conf.j2 	modified:   templates/ossec.conf.j2

--- a/tasks/Harden/Linux/RedHat/Audit.yml
+++ b/tasks/Harden/Linux/RedHat/Audit.yml
@@ -15,12 +15,12 @@
   register: conf_update
 
 - name: Ensure audit events are collected
-  template:
-    src: audit.rules.j2
-    dest: /etc/audit/rules.d/audit.rules
-    owner: root
-    group: root
-    mode: 0600
+  copy:
+    src: 'audit.rules'
+    dest: '/etc/audit/rules.d/audit.rules'
+    owner: 'root'
+    group: 'root'
+    mode: '0600'
   register: role_update
 
 - name: Reload audit service
