--- a/tasks/OSSec/Linux/configureation.yml
+++ b/tasks/OSSec/Linux/configureation.yml
@@ -5,7 +5,7 @@
     -A {{ inventory_hostname | upper }}
     -m {{ ossec_agent_authd.address }}
     -p {{ ossec_agent_authd.port }}
-    -P {{ ossec_authd_pass }}
+    -P {{ ossec_agent_authd.authd_pass }}
     {% if ossec_agent_authd.ssl_auto_negotiate == 'yes' %}-a{% endif %}
   register: ossec_agent_auth_output
   changed_when: false
