--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,5 +1,42 @@
 ---
 # Linux variables
+os_linux_audit_rules: # 审计参数
+  - '-w /sbin/insmod -p x -k modules'
+  - '-w /sbin/rmmod -p x -k modules'
+  - '-w /sbin/modprobe -p x -k modules'
+  - '-a always,exit -F arch=b32 -S init_module -S delete_module -k modules'
+  - '-a always,exit -F arch=b64 -S init_module -S delete_module -k modules'
+  - '-a always,exit -F arch=b64 -S mount -k mounts'
+  - '-a always,exit -F arch=b32 -S mount -k mounts'
+  - '-a always,exit -F arch=b64 -S sethostname -S setdomainname -k system-locale'
+  - '-a always,exit -F arch=b32 -S sethostname -S setdomainname -k system-locale'
+  - '-w /etc/issue -p wa -k system-locale'
+  - '-w /etc/issue.net -p wa -k system-locale'
+  - '-w /etc/hosts -p wa -k system-locale'
+  - '-w /etc/sysconfig/network -p wa -k system-locale'
+  - '-w /var/log/sudo.log -p wa -k actions'
+  - '-w /etc/sudoers -p wa -k scope'
+  - '-w /etc/sudoers.d -p wa -k scope'
+  - '-w /etc/group -p wa -k identity'
+  - '-w /etc/passwd -p wa -k identity'
+  - '-w /etc/gshadow -p wa -k identity'
+  - '-w /etc/shadow -p wa -k identity'
+  - '-w /etc/security/opasswd -p wa -k identity'
+  - '-a exclude,always -F msgtype=CWD'
+  - '-a exclude,always -F msgtype=EOE'
+  - '-a never,exit -F dir=/tmp -F arch=b32 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a never,exit -F dir=/tmp -F arch=b64 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a never,exit -F dir=/var/tmp -F arch=b32 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a never,exit -F dir=/var/tmp -F arch=b64 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a never,exit -F dir=/var/lib/rsyslog -F arch=b32 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a never,exit -F dir=/var/lib/rsyslog -F arch=b64 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a never,exit -F dir=/run -F arch=b32 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a never,exit -F dir=/run -F arch=b64 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a never,exit -F dir=/dev/shm -F arch=b32 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a never,exit -F dir=/dev/shm -F arch=b64 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a always,exit -F arch=b32 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a always,exit -F arch=b64 -S unlink -S unlinkat -S rename -S renameat -k delete'
+
 os_linux_kernel_parameters: # 内核参数。
   - { variable: 'net.core.somaxconn', value: '20480' }
   - { variable: 'net.ipv4.conf.all.accept_redirects', value: '0' }
