--- a/meta/main.yml
+++ b/meta/main.yml
@@ -66,5 +66,6 @@ dependencies:
       beats_output_auth: false
       beats_output_host: '{{ os_auditbeat_output.host }}'
     when:
+      - os_harden
       - os_audit
       - os_audit_type == 'auditbeat'
