modified:   tasks/Config/Linux/RedHat/Resource.yml 	modified:   tasks/Harden/Linux/RedHat/Security.yml 	modified:   vars/Windows.yml 	modified:   vars/main.yml

--- a/tasks/Config/Linux/RedHat/Resource.yml
+++ b/tasks/Config/Linux/RedHat/Resource.yml
@@ -19,6 +19,7 @@
   with_items:
     - '* soft nofile {{ os_linux_ulimit_nofile }}'
     - '* hard nofile {{ os_linux_ulimit_nofile }}'
+    - '* hard core 0'
 
 - name: Set nproc limits
   lineinfile: 
