--- a/vars/Windows.yml
+++ b/vars/Windows.yml
@@ -21,3 +21,5 @@ wmi_exporter_collector_scripts:
   - 'os_info'
 
 win_chocolatey_version: '0.10.11'
+
+ossec_winagent_repo: 'http://cache.omygods.com/wazuh/3.x/windows/'
