modified:   vars/main.yml

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -30,6 +30,10 @@ os_linux_audit_rules: # 审计参数
   - '-a never,exit -F dir=/var/tmp -F arch=b64 -S unlink -S unlinkat -S rename -S renameat -k delete'
   - '-a never,exit -F dir=/var/lib/rsyslog -F arch=b32 -S unlink -S unlinkat -S rename -S renameat -k delete'
   - '-a never,exit -F dir=/var/lib/rsyslog -F arch=b64 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a never,exit -F dir=/var/ossec/var/run -F arch=b32 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a never,exit -F dir=/var/ossec/var/run -F arch=b64 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a never,exit -F dir=/var/lib/filebeat/registry/filebeat -F arch=b32 -S unlink -S unlinkat -S rename -S renameat -k delete'
+  - '-a never,exit -F dir=/var/lib/filebeat/registry/filebeat -F arch=b64 -S unlink -S unlinkat -S rename -S renameat -k delete'
   - '-a never,exit -F dir=/run -F arch=b32 -S unlink -S unlinkat -S rename -S renameat -k delete'
   - '-a never,exit -F dir=/run -F arch=b64 -S unlink -S unlinkat -S rename -S renameat -k delete'
   - '-a never,exit -F dir=/dev/shm -F arch=b32 -S unlink -S unlinkat -S rename -S renameat -k delete'
