--- a/tasks/Config/Linux/RedHat/7/Rsyslog.yml
+++ b/tasks/Config/Linux/RedHat/7/Rsyslog.yml
@@ -8,6 +8,7 @@
     - '$PreserveFQDN on'
     - 'template(name="gelf" type="list") {'
     - '  constant(value="{\"version\":\"1.1\",")'
+    - '  constant(value="\"SourceModuleName\":\"in_rsyslog\",")'
     - '  constant(value="\"host\":\"") property(name="hostname" caseConversion="upper")'
     - '  constant(value="\",\"short_message\":\"") property(name="msg" format="json")'
     - '  constant(value="\",\"timestamp\":") property(name="timereported" dateformat="unixtimestamp")'
