--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -69,6 +69,7 @@ enabled_service_RedHat_7: # 版本7需要的服务。
 
 unload_module_RedHat: # 不需要的模块。
   - 'cramfs'
+  - 'floppy'
   - 'freevxfs'
   - 'jffs2'
   - 'hfs'
