modified:   README.md 	modified:   defaults/main.yml

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,6 +16,7 @@ os_pass_maxAge: '60' # Windows主机账户密码有效期。
 
 # 公共领事参数 #
 environments: 'SIT' # 定义系统环境。
+exporter_is_install: '{{ os_exporter | bool | to_json }}' # 是否部署普罗米修斯客户端。
 consul_public_register: false # 是否向公共领事注册普罗米修斯终端。
 consul_public_exporter_token: '00000000-0000-0000-0000-000000000000' # 公共领事客户端访问控制令牌。
 consul_public_http_port: '8500' # 公共领事公共客户端端口。
