modified:   tasks/Config/Linux/RedHat/6/Rsyslog.yml 	modified:   tasks/OSSec/Linux/RedHat.yml 	modified:   tasks/Software/RedHat.yml

--- a/tasks/Config/Linux/RedHat/6/Rsyslog.yml
+++ b/tasks/Config/Linux/RedHat/6/Rsyslog.yml
@@ -15,6 +15,9 @@
   with_items:
     - '{{ rsyslog_packages }}'
   register: soft_update
+  until: soft_update is succeeded
+  retries: 3
+  delay: 5
 
 - name: Remote rsyslog Configuration
   lineinfile:
