--- a/tasks/Harden/Linux.yml
+++ b/tasks/Harden/Linux.yml
@@ -13,6 +13,8 @@
 
 - include: '{{ ansible_system }}/{{ ansible_os_family }}/Filesystem.yml'
 
+- include: '{{ ansible_system }}/Permissions.yml'
+
 - include: '{{ ansible_system }}/Selinux.yml'
   when: os_linux_disable_selinux
 
