--- a/tasks/Config/Linux/Environment.yml
+++ b/tasks/Config/Linux/Environment.yml
@@ -9,7 +9,11 @@
   lineinfile:
     dest: /etc/profile
     state: present
-    line: PROMPT_COMMAND='history -a >(tee -a ~/.bash_history | logger -t "$USER ${SSH_CLIENT%% *} $PWD")'
+    line: '{{ item }}'
+  with_items:
+    - 'umask 027'
+    - TMOUT=600
+    - PROMPT_COMMAND='history -a >(tee -a ~/.bash_history | logger -t "$USER ${SSH_CLIENT%% *} $PWD")'
 
 - name: Disable Vim tracking
   lineinfile:
@@ -91,6 +95,8 @@
     state: present
     line: '{{ item }}'
   with_items:
+    - 'umask 027'
+    - 'TMOUT=600'
     - "IP=$(/sbin/ifconfig eth0|awk '/inet / {print $2}'|cut -d ':' -f 2)"
     - 'export PS1="[\[\033[01;31m\]\u\[\033[00m\]@\[\033[01;32m\]\h\[\033[00m\] \[\033[01;36m\]\$IP \[\033[01;33m\]\W\[\033[00m\]]\[\033[00;34m\]$\[\033[00m\]"'
 
