--- a/tasks/OSSec/Linux.yml
+++ b/tasks/OSSec/Linux.yml
@@ -4,6 +4,17 @@
     path: '/var/ossec/etc/client.keys'
   register: check_ossec_keys
 
+- name: Check register manager are accessible from current host
+  wait_for:
+    host: '{{ ossec_agent_authd.address }}'
+    port: '{{ ossec_agent_authd.port }}'
+    state: 'started'
+    delay: 0
+    timeout: 5
+  changed_when: false
+  failed_when: false
+  register: check_ossec_reg
+
 - name: OSsec agent operation
   block:
     - name: Include tasks for specific OS
@@ -20,4 +31,7 @@
       meta: flush_handlers
     - name: Remove OSSec metadata
       include: '{{ ansible_system }}/cleanup.yml'
-  when: not check_ossec_keys.stat.exists or check_ossec_keys.stat.size == 0
+  when:
+    - check_ossec_reg.state is defined
+    - check_ossec_reg.state == 'started'
+    - not check_ossec_keys.stat.exists or check_ossec_keys.stat.size == 0
